@@ -1,9 +1,6 @@
 package com.sprint.otboo.weather.controller;
 
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
-import static org.mockito.ArgumentMatchers.anyDouble;
-import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -11,9 +8,14 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import com.sprint.otboo.auth.jwt.JwtRegistry;
 import com.sprint.otboo.auth.jwt.TokenProvider;
 import com.sprint.otboo.common.exception.GlobalExceptionHandler;
-import com.sprint.otboo.weather.dto.response.WeatherLocationResponse;
+import com.sprint.otboo.weather.dto.data.PrecipitationDto;
+import com.sprint.otboo.weather.dto.data.TemperatureDto;
+import com.sprint.otboo.weather.dto.data.WeatherSummaryDto;
 import com.sprint.otboo.weather.service.WeatherLocationQueryService;
+import com.sprint.otboo.weather.service.WeatherService;
+import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,7 +35,10 @@ class WeatherControllerTest {
     private MockMvc mvc;
 
     @MockitoBean
-    private WeatherLocationQueryService service;
+    private WeatherLocationQueryService locationQueryService;
+
+    @MockitoBean
+    private WeatherService weatherService;
 
     @MockitoBean
     private TokenProvider tokenProvider;
@@ -42,26 +47,60 @@ class WeatherControllerTest {
     private JwtRegistry jwtRegistry;
 
     @Test
-    void 정상_요청은_200과_올바른_본문을_반환해야_한다() throws Exception {
-        WeatherLocationResponse response =
-            new WeatherLocationResponse(37.5665,126.9780,60,127,
-                List.of("서울특별시","중구","태평로1가"));
-        given(service.getWeatherLocation(anyDouble(), anyDouble()))
-            .willReturn(response);
+    @DisplayName("정상 요청은 200과 배열(JSON Array)을 반환한다")
+    void 정상_요청은_200과_JSON_배열을_반환해야_한다() throws Exception {
+        // given
+        when(weatherService.getWeather(37.5665, 126.9780))
+            .thenReturn(Collections.emptyList());
 
-        mvc.perform(get("/api/weathers/location")
-                .param("longitude","126.9780")
-                .param("latitude","37.5665"))
+        // expect
+        mvc.perform(get("/api/weathers")
+                .param("longitude", "126.9780")
+                .param("latitude", "37.5665"))
             .andExpect(status().isOk())
-            .andExpect(jsonPath("$.x", is(60)))
-            .andExpect(jsonPath("$.y", is(127)))
-            .andExpect(jsonPath("$.locationNames", hasSize(3)));
+            .andExpect(jsonPath("$").isArray());
     }
 
     @Test
-    void 파라미터가_누락되면_400을_반환해야_한다() throws Exception {
-        mvc.perform(get("/api/weathers/location")
-                .param("longitude","126.9780"))
+    @DisplayName("파라미터 누락 시 400을 반환한다")
+    void 파라미터_누락시_400을_반환해야_한다() throws Exception {
+        mvc.perform(get("/api/weathers")
+                .param("longitude", "126.9780"))
             .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    @DisplayName("잘못된 위경도 형식이면 400을 반환한다")
+    void 잘못된_위경도_형식이면_400을_반환해야_한다() throws Exception {
+        mvc.perform(get("/api/weathers")
+                .param("longitude", "abc")
+                .param("latitude", "def"))
+            .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    @DisplayName("위경도 범위를 벗어나면 400과 오류 상세를 반환한다")
+    void 위경도_범위_초과시_400과_오류_상세를_반환해야_한다() throws Exception {
+        // 위도는 -90~90, 경도는 -180~180 범위 밖
+        mvc.perform(get("/api/weathers")
+                .param("longitude", "200")
+                .param("latitude", "95"))
+            .andExpect(status().isBadRequest())
+            // ErrorResponse.details 존재(프로토타입 명세 기준)
+            .andExpect(jsonPath("$.details.latitude").value("95.0"))
+            .andExpect(jsonPath("$.details.longitude").value("200.0"));
+    }
+
+    @Test
+    @DisplayName("/api/weathers/location 정상 요청은 200을 반환한다")
+    void 위치_정보_정상요청은_200을_반환해야_한다() throws Exception {
+        // 바디 구조는 구현체에 의존하므로 상태 코드만 검증
+        when(locationQueryService.getWeatherLocation(37.5665, 126.9780))
+            .thenReturn(null);
+
+        mvc.perform(get("/api/weathers/location")
+                .param("longitude", "126.9780")
+                .param("latitude", "37.5665"))
+            .andExpect(status().isOk());
     }
 }
